--- a/index.html
+++ b/index.html
@@ -42,6 +42,49 @@
 					</div>
 				</div>
 			</section>
+			<section class="text-blok">
+				<div class="container">
+					<div class="text-blok__wrapper">
+						<h2 class="text-blok__title">
+							The Definition of AI
+						</h2>
+						<div class="text-blok__body">
+							<div class="text-blok-blok">
+								<h3 class="text-blok-blok__title">
+									What is AI?
+								</h3>
+								<p class="text-blok-blok__text">
+									AI is a field of computer science that focuses on creating machines which can perform tasks that normally require human intervention.
+								</p>
+							</div>
+							<div class="text-blok-blok">
+								<h3 class="text-blok-blok__title">
+									History of AI
+								</h3>
+								<p class="text-blok-blok__text">
+									First coined in 1956, artificial intelligence research has been conducted for over 60 years and has been instrumental in creating machines with human-like learning abilities.
+								</p>
+							</div>
+							<div class="text-blok-blok">
+								<h3 class="text-blok-blok__title">
+									The Future of AI
+								</h3>
+								<p class="text-blok-blok__text">
+									AI continues to evolve and its impact on society is growing alongside it, making it essential to understand its potential and its challenges.
+								</p>
+							</div>
+							<div class="text-blok-blok">
+								<h3 class="text-blok-blok__title">
+									Applications of AI
+								</h3>
+								<p class="text-blok-blok__text">
+									AI has already found its way into nearly every industry, from self-driving cars to healthcare, finance and beyond.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</div>
 		
 		<script src="js/custom.js"></script>
