--- a/index.html
+++ b/index.html
@@ -85,6 +85,265 @@
 					</div>
 				</div>
 			</section>
+			<section class="columns-blok">
+				<div class="container">
+					<div class="columns-blok__wrapper">
+						<h2 class="columns-blok__title">
+							Exploring Deep Learning
+						</h2>
+						<div class="columns-blok__body">
+							<div class="columns-blok-blok">
+								<h3 class="columns-blok-blok__title">
+									Definition
+								</h3>
+								<p class="columns-blok-blok__text">
+									Deep Learning is a subset of AI that enables machines to learn by processing vast amounts of data.
+								</p>
+							</div>
+							<div class="columns-blok-blok">
+								<h3 class="columns-blok-blok__title">
+									Methods
+								</h3>
+								<p class="columns-blok-blok__text">
+									The deep learning process is composed of neural networks that mimic the human brain. Algorithms are applied to allow machines to learn and improve over time.
+								</p>
+							</div>
+							<div class="columns-blok-blok">
+								<h3 class="columns-blok-blok__title">
+									Applications
+								</h3>
+								<p class="columns-blok-blok__text">
+									Deep Learning has revolutionized industries such as healthcare, banking, and media. It's used for image and speech recognition, chatbots, and much more.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="text-blok text-blok_column">
+				<div class="container">
+					<div class="text-blok__wrapper">
+						<h2 class="text-blok__title">
+							The Definition of AI
+						</h2>
+						<div class="text-blok__body">
+							<div class="text-blok-blok">
+								<div class="text-blok-blok__img ibg">
+									<img src="img/text-blok/2.jpg" alt="">
+								</div>
+								<h3 class="text-blok-blok__title">
+									What is AI?
+								</h3>
+								<p class="text-blok-blok__text">
+									AI is a field of computer science that focuses on creating machines which can perform tasks that normally require human intervention.
+								</p>
+							</div>
+							<div class="text-blok-blok">
+								<div class="text-blok-blok__img ibg">
+									<img src="img/text-blok/3.jpg" alt="">
+								</div>
+								<h3 class="text-blok-blok__title">
+									History of AI
+								</h3>
+								<p class="text-blok-blok__text">
+									First coined in 1956, artificial intelligence research has been conducted for over 60 years and has been instrumental in creating machines with human-like learning abilities.
+								</p>
+							</div>
+							<div class="text-blok-blok">
+								<div class="text-blok-blok__img ibg">
+									<img src="img/text-blok/4.jpg" alt="">
+								</div>
+								<h3 class="text-blok-blok__title">
+									The Future of AI
+								</h3>
+								<p class="text-blok-blok__text">
+									AI continues to evolve and its impact on society is growing alongside it, making it essential to understand its potential and its challenges.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="text-blok text-blok_list">
+				<div class="container">
+					<div class="text-blok__wrapper">
+						<h2 class="text-blok__title">
+							Overview of Neural Network Development
+						</h2>
+						<div class="text-blok__body">
+							<div class="text-blok-blok">
+								<div class="text-blok-blok__number">
+									1
+								</div>
+								<div class="text-blok-blok__content">
+									<h3 class="text-blok-blok__title">
+										What are Neural Networks?
+									</h3>
+									<p class="text-blok-blok__text">
+										Neural networks are computational models designed to simulate the structure and capabilities of the human brain.
+									</p>
+								</div>
+							</div>
+							<div class="text-blok-blok">
+								<div class="text-blok-blok__number">
+									2
+								</div>
+								<div class="text-blok-blok__content">
+									<h3 class="text-blok-blok__title">
+										Types
+									</h3>
+									<p class="text-blok-blok__text">
+										The most common types of neural networks include deep neural networks, recurrent neural networks, and convolutional neural networks.
+									</p>
+								</div>
+							</div>
+							<div class="text-blok-blok">
+								<div class="text-blok-blok__number">
+									3
+								</div>
+								<div class="text-blok-blok__content">
+									<h3 class="text-blok-blok__title">
+										Applications
+									</h3>
+									<p class="text-blok-blok__text">
+										Neural networks have proven effective in speech recognition, image processing, and natural language processing, among others.
+									</p>
+								</div>
+							</div>
+							<div class="text-blok-blok">
+								<div class="text-blok-blok__number">
+									4
+								</div>
+								<div class="text-blok-blok__content">
+									<h3 class="text-blok-blok__title">
+										Future Developments
+									</h3>
+									<p class="text-blok-blok__text">
+										The future of neural network development is bright, with more sophisticated algorithms and technologies in the pipeline.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="columns-blok">
+				<div class="container">
+					<div class="columns-blok__wrapper">
+						<h2 class="columns-blok__title">
+							Applications of AI in Industries
+						</h2>
+						<div class="columns-blok__body">
+							<div class="columns-blok-blok">
+								<h3 class="columns-blok-blok__title">
+									Healthcare
+								</h3>
+								<p class="columns-blok-blok__text">
+									AI is being used to improve disease diagnosis, manage medical records, and predict disease outbreaks. AI is also used in robotic surgery and drug development.
+								</p>
+							</div>
+							<div class="columns-blok-blok">
+								<h3 class="columns-blok-blok__title">
+									Finance
+								</h3>
+								<p class="columns-blok-blok__text">
+									AI helps banks and financial institutions by identifying fraud, predicting market trends, and providing customer service through chatbots.
+								</p>
+							</div>
+							<div class="columns-blok-blok">
+								<h3 class="columns-blok-blok__title">
+									Retail
+								</h3>
+								<p class="columns-blok-blok__text">
+									AI helps to personalize customer experience through chatbots, improve inventory and supply chain management, and track customer spending patterns.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="text-blok text-blok_column text-blok_no-bacgraund">
+				<div class="container">
+					<div class="text-blok__wrapper">
+						<h2 class="text-blok__title">
+							AI Ethical Concerns
+						</h2>
+						<div class="text-blok__body">
+							<div class="text-blok-blok">
+								<div class="text-blok-blok__img ibg">
+									<img src="img/text-blok/6.jpg" alt="">
+								</div>
+								<h3 class="text-blok-blok__title">
+									Privacy
+								</h3>
+								<p class="text-blok-blok__text">
+									With access to vast amounts of data, AI opens the door to data breaches and privacy violations.
+								</p>
+							</div>
+							<div class="text-blok-blok">
+								<div class="text-blok-blok__img ibg">
+									<img src="img/text-blok/7.jpg" alt="">
+								</div>
+								<h3 class="text-blok-blok__title">
+									Employment
+								</h3>
+								<p class="text-blok-blok__text">
+									AI automation can reduce the need for certain jobs, including white-collar jobs, and increase socio-economic inequality.
+								</p>
+							</div>
+							<div class="text-blok-blok">
+								<div class="text-blok-blok__img ibg">
+									<img src="img/text-blok/8.jpg" alt="">
+								</div>
+								<h3 class="text-blok-blok__title">
+									Bias
+								</h3>
+								<p class="text-blok-blok__text">
+									Bias can be introduced into the AI system when it is trained on limited data, causing discrimination and perpetuating social ills.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="columns-blok columns-blok_bacgraund-column">
+				<div class="container">
+					<div class="columns-blok__wrapper">
+						<h2 class="columns-blok__title">
+							Applications of AI in Industries
+						</h2>
+						<div class="columns-blok__body">
+							<div class="columns-blok-blok">
+								<h3 class="columns-blok-blok__title">
+									Healthcare
+								</h3>
+								<p class="columns-blok-blok__text">
+									AI is being used to improve disease diagnosis, manage medical records, and predict disease outbreaks. AI is also used in robotic surgery and drug development.
+								</p>
+							</div>
+							<div class="columns-blok-blok">
+								<h3 class="columns-blok-blok__title">
+									Finance
+								</h3>
+								<p class="columns-blok-blok__text">
+									AI helps banks and financial institutions by identifying fraud, predicting market trends, and providing customer service through chatbots.
+								</p>
+							</div>
+							<div class="columns-blok-blok">
+								<h3 class="columns-blok-blok__title">
+									Retail
+								</h3>
+								<p class="columns-blok-blok__text">
+									AI helps to personalize customer experience through chatbots, improve inventory and supply chain management, and track customer spending patterns.
+								</p>
+							</div>
+						</div>
+						<a href="#" class="index-blok__link">
+							Get in Touch
+						</a>
+					</div>
+				</div>
+			</section>
 		</div>
 		
 		<script src="js/custom.js"></script>
